--- a/TinyEngine/TinyEngine.vcxproj.filters
+++ b/TinyEngine/TinyEngine.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="src\Platform\OpenGL\imGuiOpenGLRenderer.h">
       <Filter>Platform\OpenGL</Filter>
     </ClInclude>
+    <ClInclude Include="src\Platform\Windows\WindowsInput.h">
+      <Filter>Platform\Windows</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
@@ -49,6 +52,9 @@
     <ClInclude Include="src\TinyEngine\Events\MouseEvent.h">
       <Filter>TinyEngine\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\TinyEngine\Input.h">
+      <Filter>TinyEngine</Filter>
+    </ClInclude>
     <ClInclude Include="src\TinyEngine\Layer.h">
       <Filter>TinyEngine</Filter>
     </ClInclude>
@@ -69,6 +75,9 @@
   <ItemGroup>
     <ClCompile Include="src\Platform\OpenGL\imGuiOpenGLRenderer.cpp">
       <Filter>Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
+      <Filter>Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>Platform\Windows</Filter>
