--- a/TinyEngine/TinyEngine.vcxproj.filters
+++ b/TinyEngine/TinyEngine.vcxproj.filters
@@ -55,6 +55,9 @@
     <ClInclude Include="src\TinyEngine\Input.h">
       <Filter>TinyEngine</Filter>
     </ClInclude>
+    <ClInclude Include="src\TinyEngine\KeyCodes.h">
+      <Filter>TinyEngine</Filter>
+    </ClInclude>
     <ClInclude Include="src\TinyEngine\Layer.h">
       <Filter>TinyEngine</Filter>
     </ClInclude>
@@ -62,6 +65,9 @@
       <Filter>TinyEngine</Filter>
     </ClInclude>
     <ClInclude Include="src\TinyEngine\Log.h">
+      <Filter>TinyEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TinyEngine\MouseButtonCodes.h">
       <Filter>TinyEngine</Filter>
     </ClInclude>
     <ClInclude Include="src\TinyEngine\Window.h">
