Added orthographic camera

--- a/TinyEngine/TinyEngine.vcxproj
+++ b/TinyEngine/TinyEngine.vcxproj
@@ -140,6 +140,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\TinyEngine\Renderer\OrthographicCamera.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\TinyEngine\Renderer\RendererAPI.h" />
     <ClInclude Include="src\TinyEngine\Renderer\RenderCommand.h" />
@@ -534,6 +535,7 @@
     <ClInclude Include="src\TinyEngine\Renderer\VertexArray.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\TinyEngine\Renderer\OrthographicCamera.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\TinyEngine\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\TinyEngine\Renderer\RenderCommand.cpp" />
