--- a/TinyEngine/TinyEngine.vcxproj.filters
+++ b/TinyEngine/TinyEngine.vcxproj.filters
@@ -1212,6 +1212,7 @@
     <ClInclude Include="src\TinyEngine\Renderer\RenderCommand.h" />
     <ClInclude Include="src\TinyEngine\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
+    <ClInclude Include="src\TinyEngine\Renderer\OrthographicCamera.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
@@ -1259,5 +1260,6 @@
     <ClCompile Include="src\TinyEngine\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\TinyEngine\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
+    <ClCompile Include="src\TinyEngine\Renderer\OrthographicCamera.cpp" />
   </ItemGroup>
 </Project>
