Moved OpenGL shader implementation to OpenGLShader class

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=1454,494
+ViewportPos=1655,729
+ViewportId=0x080FC883
 Size=394,351
 Collapsed=0
 
@@ -27,6 +28,11 @@ DockId=0x00000006,0
 [Window][Test]
 Pos=452,397
 Size=92,48
+Collapsed=0
+
+[Window][Settings]
+Pos=114,133
+Size=584,413
 Collapsed=0
 
 [Docking][Data]
