try to visualize our data simply

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-ViewportPos=1655,729
-ViewportId=0x080FC883
+Pos=1500,456
 Size=394,351
 Collapsed=0
 
@@ -31,7 +30,8 @@ Size=92,48
 Collapsed=0
 
 [Window][Settings]
-Pos=114,133
+ViewportPos=273,780
+ViewportId=0x1C33C293
 Size=584,413
 Collapsed=0
 
