--- a/TinyEngine/TinyEngine.vcxproj
+++ b/TinyEngine/TinyEngine.vcxproj
@@ -77,7 +77,7 @@
       <PrecompiledHeaderFile>tepch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;TE_BUILD_DLL;TE_PLATFORM_WINDOWS;GLFW_INCLUDE_NONE;TE_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\GLAD\include;vendor\imgui;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\GLAD\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -97,7 +97,7 @@
       <PrecompiledHeaderFile>tepch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;TE_BUILD_DLL;TE_PLATFORM_WINDOWS;GLFW_INCLUDE_NONE;TE_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\GLAD\include;vendor\imgui;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\GLAD\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -121,7 +121,7 @@
       <PrecompiledHeaderFile>tepch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;TE_BUILD_DLL;TE_PLATFORM_WINDOWS;GLFW_INCLUDE_NONE;TE_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\GLAD\include;vendor\imgui;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\GLAD\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -140,21 +140,18 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
-    <ClInclude Include="src\TinyEngine\Core\Timestep.h" />
-    <ClInclude Include="src\TinyEngine\Renderer\OrthographicCamera.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
-    <ClInclude Include="src\TinyEngine\Renderer\RendererAPI.h" />
-    <ClInclude Include="src\TinyEngine\Renderer\RenderCommand.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
-    <ClInclude Include="src\TinyEngine\Renderer\Buffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLTexture.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\TinyEngine.h" />
     <ClInclude Include="src\TinyEngine\Application.h" />
     <ClInclude Include="src\TinyEngine\Core.h" />
+    <ClInclude Include="src\TinyEngine\Core\Timestep.h" />
     <ClInclude Include="src\TinyEngine\EntryPoint.h" />
     <ClInclude Include="src\TinyEngine\Events\ApplicationEvent.h" />
     <ClInclude Include="src\TinyEngine\Events\Event.h" />
@@ -166,9 +163,15 @@
     <ClInclude Include="src\TinyEngine\LayerStack.h" />
     <ClInclude Include="src\TinyEngine\Log.h" />
     <ClInclude Include="src\TinyEngine\MouseButtonCodes.h" />
+    <ClInclude Include="src\TinyEngine\Renderer\Buffer.h" />
     <ClInclude Include="src\TinyEngine\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\TinyEngine\Renderer\OrthographicCamera.h" />
+    <ClInclude Include="src\TinyEngine\Renderer\RenderCommand.h" />
     <ClInclude Include="src\TinyEngine\Renderer\Renderer.h" />
+    <ClInclude Include="src\TinyEngine\Renderer\RendererAPI.h" />
     <ClInclude Include="src\TinyEngine\Renderer\Shader.h" />
+    <ClInclude Include="src\TinyEngine\Renderer\Texture.h" />
+    <ClInclude Include="src\TinyEngine\Renderer\VertexArray.h" />
     <ClInclude Include="src\TinyEngine\Window.h" />
     <ClInclude Include="src\TinyEngine\imGui\ImGuiLayer.h" />
     <ClInclude Include="src\tepch.h" />
@@ -534,32 +537,35 @@
     <ClInclude Include="vendor\glm\glm\vec3.hpp" />
     <ClInclude Include="vendor\glm\glm\vec4.hpp" />
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp" />
-    <ClInclude Include="src\TinyEngine\Renderer\VertexArray.h" />
+    <ClInclude Include="vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
-    <ClCompile Include="src\TinyEngine\Renderer\OrthographicCamera.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
-    <ClCompile Include="src\TinyEngine\Renderer\RendererAPI.cpp" />
-    <ClCompile Include="src\TinyEngine\Renderer\RenderCommand.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
-    <ClCompile Include="src\TinyEngine\Renderer\Buffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLTexture.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\TinyEngine\Application.cpp" />
     <ClCompile Include="src\TinyEngine\Layer.cpp" />
     <ClCompile Include="src\TinyEngine\LayerStack.cpp" />
     <ClCompile Include="src\TinyEngine\Log.cpp" />
+    <ClCompile Include="src\TinyEngine\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\TinyEngine\Renderer\OrthographicCamera.cpp" />
+    <ClCompile Include="src\TinyEngine\Renderer\RenderCommand.cpp" />
+    <ClCompile Include="src\TinyEngine\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\TinyEngine\Renderer\RendererAPI.cpp" />
+    <ClCompile Include="src\TinyEngine\Renderer\Shader.cpp" />
+    <ClCompile Include="src\TinyEngine\Renderer\Texture.cpp" />
+    <ClCompile Include="src\TinyEngine\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\TinyEngine\imGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\TinyEngine\imGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\tepch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="src\TinyEngine\Renderer\Renderer.cpp" />
-    <ClCompile Include="src\TinyEngine\Renderer\Shader.cpp" />
-    <ClCompile Include="src\TinyEngine\Renderer\VertexArray.cpp" />
+    <ClCompile Include="vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="vendor\GLFW\GLFW.vcxproj">
