--- a/TinyEngine/TinyEngine.vcxproj.filters
+++ b/TinyEngine/TinyEngine.vcxproj.filters
@@ -7,14 +7,23 @@
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Platform\OpenGL">
+      <UniqueIdentifier>{35A49437-A105-7245-2A73-B8F796D3A804}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Platform\Windows">
       <UniqueIdentifier>{5B054582-4794-CE4B-F0B2-E246DC20DFF1}</UniqueIdentifier>
     </Filter>
     <Filter Include="src\TinyEngine">
       <UniqueIdentifier>{3667BB16-2235-AF1C-0BC9-1F43F7358B81}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\TinyEngine\Core">
+      <UniqueIdentifier>{4E7D6348-BADE-4056-434C-8708AFAC7715}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\TinyEngine\Events">
       <UniqueIdentifier>{5A1A5AF4-C686-15EF-8F7A-AD4CFBA53757}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\TinyEngine\Renderer">
+      <UniqueIdentifier>{9C27456A-085F-8D01-1169-F1247D1FB4FA}</UniqueIdentifier>
     </Filter>
     <Filter Include="src\TinyEngine\imGui">
       <UniqueIdentifier>{00FD8057-EC8B-0A21-95AA-1E1C81181BC7}</UniqueIdentifier>
@@ -40,14 +49,29 @@
     <Filter Include="vendor\glm\glm\gtx">
       <UniqueIdentifier>{B3A6A76B-9F8A-68C1-08EB-6214F4ED5243}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\TinyEngine\Renderer">
-      <UniqueIdentifier>{6a3e173a-e04e-413e-9386-85599b353268}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="src\Platform\OpenGL">
-      <UniqueIdentifier>{b0fabbcf-9db7-4546-989a-3dfcf7bfa338}</UniqueIdentifier>
+    <Filter Include="vendor\stb_image">
+      <UniqueIdentifier>{0DA0BA59-F998-D9AB-22CB-BE300E23B9B7}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLTexture.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsInput.h">
       <Filter>src\Platform\Windows</Filter>
     </ClInclude>
@@ -62,6 +86,9 @@
     </ClInclude>
     <ClInclude Include="src\TinyEngine\Core.h">
       <Filter>src\TinyEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TinyEngine\Core\Timestep.h">
+      <Filter>src\TinyEngine\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\TinyEngine\EntryPoint.h">
       <Filter>src\TinyEngine</Filter>
@@ -95,6 +122,33 @@
     </ClInclude>
     <ClInclude Include="src\TinyEngine\MouseButtonCodes.h">
       <Filter>src\TinyEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TinyEngine\Renderer\Buffer.h">
+      <Filter>src\TinyEngine\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TinyEngine\Renderer\GraphicsContext.h">
+      <Filter>src\TinyEngine\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TinyEngine\Renderer\OrthographicCamera.h">
+      <Filter>src\TinyEngine\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TinyEngine\Renderer\RenderCommand.h">
+      <Filter>src\TinyEngine\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TinyEngine\Renderer\Renderer.h">
+      <Filter>src\TinyEngine\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TinyEngine\Renderer\RendererAPI.h">
+      <Filter>src\TinyEngine\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TinyEngine\Renderer\Shader.h">
+      <Filter>src\TinyEngine\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TinyEngine\Renderer\Texture.h">
+      <Filter>src\TinyEngine\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TinyEngine\Renderer\VertexArray.h">
+      <Filter>src\TinyEngine\Renderer</Filter>
     </ClInclude>
     <ClInclude Include="src\TinyEngine\Window.h">
       <Filter>src\TinyEngine</Filter>
@@ -1191,32 +1245,29 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp">
       <Filter>vendor\glm\glm</Filter>
     </ClInclude>
-    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h">
-      <Filter>src\Platform\OpenGL</Filter>
+    <ClInclude Include="vendor\stb_image\stb_image.h">
+      <Filter>vendor\stb_image</Filter>
     </ClInclude>
-    <ClInclude Include="src\TinyEngine\Renderer\GraphicsContext.h">
-      <Filter>src\TinyEngine\Renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="src\TinyEngine\Renderer\Shader.h">
-      <Filter>src\TinyEngine\Renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="src\TinyEngine\Renderer\Renderer.h">
-      <Filter>src\TinyEngine\Renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="src\TinyEngine\Renderer\Buffer.h">
-      <Filter>src\TinyEngine\Renderer</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
-    <ClInclude Include="src\TinyEngine\Renderer\VertexArray.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
-    <ClInclude Include="src\TinyEngine\Renderer\RenderCommand.h" />
-    <ClInclude Include="src\TinyEngine\Renderer\RendererAPI.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
-    <ClInclude Include="src\TinyEngine\Renderer\OrthographicCamera.h" />
-    <ClInclude Include="src\TinyEngine\Core\Timestep.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLTexture.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
       <Filter>src\Platform\Windows</Filter>
     </ClCompile>
@@ -1235,6 +1286,30 @@
     <ClCompile Include="src\TinyEngine\Log.cpp">
       <Filter>src\TinyEngine</Filter>
     </ClCompile>
+    <ClCompile Include="src\TinyEngine\Renderer\Buffer.cpp">
+      <Filter>src\TinyEngine\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TinyEngine\Renderer\OrthographicCamera.cpp">
+      <Filter>src\TinyEngine\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TinyEngine\Renderer\RenderCommand.cpp">
+      <Filter>src\TinyEngine\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TinyEngine\Renderer\Renderer.cpp">
+      <Filter>src\TinyEngine\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TinyEngine\Renderer\RendererAPI.cpp">
+      <Filter>src\TinyEngine\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TinyEngine\Renderer\Shader.cpp">
+      <Filter>src\TinyEngine\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TinyEngine\Renderer\Texture.cpp">
+      <Filter>src\TinyEngine\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TinyEngine\Renderer\VertexArray.cpp">
+      <Filter>src\TinyEngine\Renderer</Filter>
+    </ClCompile>
     <ClCompile Include="src\TinyEngine\imGui\ImGuiBuild.cpp">
       <Filter>src\TinyEngine\imGui</Filter>
     </ClCompile>
@@ -1244,25 +1319,8 @@
     <ClCompile Include="src\tepch.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp">
-      <Filter>src\Platform\OpenGL</Filter>
+    <ClCompile Include="vendor\stb_image\stb_image.cpp">
+      <Filter>vendor\stb_image</Filter>
     </ClCompile>
-    <ClCompile Include="src\TinyEngine\Renderer\Shader.cpp">
-      <Filter>src\TinyEngine\Renderer</Filter>
-    </ClCompile>
-    <ClCompile Include="src\TinyEngine\Renderer\Renderer.cpp">
-      <Filter>src\TinyEngine\Renderer</Filter>
-    </ClCompile>
-    <ClCompile Include="src\TinyEngine\Renderer\Buffer.cpp">
-      <Filter>src\TinyEngine\Renderer</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
-    <ClCompile Include="src\TinyEngine\Renderer\VertexArray.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
-    <ClCompile Include="src\TinyEngine\Renderer\RenderCommand.cpp" />
-    <ClCompile Include="src\TinyEngine\Renderer\RendererAPI.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
-    <ClCompile Include="src\TinyEngine\Renderer\OrthographicCamera.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
   </ItemGroup>
 </Project>
