Initial dockspace work (enable in Sandbox2D.cpp:70)

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -30,14 +30,14 @@ Size=92,48
 Collapsed=0
 
 [Window][Settings]
-Pos=1800,721
-Size=584,413
+Pos=9,2
+Size=1022,951
 Collapsed=0
 
 [Docking][Data]
 DockSpace     ID=0xFA06BC56 Pos=467,428 Size=1280,701 Split=Y
   DockNode    ID=0x00000005 Parent=0xFA06BC56 SizeRef=1280,351 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=499,701 SelectedTab=0xBF126D42
+    DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=499,701
     DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=383,701 CentralNode=1
-  DockNode    ID=0x00000006 Parent=0xFA06BC56 SizeRef=1280,348 SelectedTab=0x46B5E99C
+  DockNode    ID=0x00000006 Parent=0xFA06BC56 SizeRef=1280,348
 
