Added basic Framebuffer class

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -15,7 +15,8 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][DockSpace Demo]
-Size=1280,720
+Pos=0,0
+Size=1920,1080
 Collapsed=0
 
 [Window][Example: Console]
@@ -30,11 +31,13 @@ Size=92,48
 Collapsed=0
 
 [Window][Settings]
-Pos=9,2
-Size=1022,951
+Pos=0,19
+Size=1920,1061
 Collapsed=0
+DockId=0x3BC79352,0
 
 [Docking][Data]
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=49,102 Size=1920,1061 CentralNode=1 Selected=0x1C33C293
 DockSpace     ID=0xFA06BC56 Pos=467,428 Size=1280,701 Split=Y
   DockNode    ID=0x00000005 Parent=0xFA06BC56 SizeRef=1280,351 Split=X
     DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=499,701
