--- a/TinyEngine/TinyEngine.vcxproj
+++ b/TinyEngine/TinyEngine.vcxproj
@@ -140,12 +140,9 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\Platform\OpenGL\OpenGLFramebuffer.h" />
-    <ClInclude Include="src\TinyEngine\Renderer\Framebuffer.h" />
-    <ClInclude Include="src\TinyEngine\Debug\Instrumentor.h" />
-    <ClInclude Include="src\TinyEngine\Renderer\Renderer2D.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLFramebuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLTexture.h" />
@@ -164,16 +161,19 @@
     <ClInclude Include="src\TinyEngine\Core\MouseButtonCodes.h" />
     <ClInclude Include="src\TinyEngine\Core\Timestep.h" />
     <ClInclude Include="src\TinyEngine\Core\Window.h" />
+    <ClInclude Include="src\TinyEngine\Debug\Instrumentor.h" />
     <ClInclude Include="src\TinyEngine\Events\ApplicationEvent.h" />
     <ClInclude Include="src\TinyEngine\Events\Event.h" />
     <ClInclude Include="src\TinyEngine\Events\KeyEvent.h" />
     <ClInclude Include="src\TinyEngine\Events\MouseEvent.h" />
     <ClInclude Include="src\TinyEngine\Renderer\Buffer.h" />
+    <ClInclude Include="src\TinyEngine\Renderer\Framebuffer.h" />
     <ClInclude Include="src\TinyEngine\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\TinyEngine\Renderer\OrthographicCamera.h" />
     <ClInclude Include="src\TinyEngine\Renderer\OrthographicCameraController.h" />
     <ClInclude Include="src\TinyEngine\Renderer\RenderCommand.h" />
     <ClInclude Include="src\TinyEngine\Renderer\Renderer.h" />
+    <ClInclude Include="src\TinyEngine\Renderer\Renderer2D.h" />
     <ClInclude Include="src\TinyEngine\Renderer\RendererAPI.h" />
     <ClInclude Include="src\TinyEngine\Renderer\Shader.h" />
     <ClInclude Include="src\TinyEngine\Renderer\Texture.h" />
@@ -545,11 +545,9 @@
     <ClInclude Include="vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Platform\OpenGL\OpenGLFramebuffer.cpp" />
-    <ClCompile Include="src\TinyEngine\Renderer\Framebuffer.cpp" />
-    <ClCompile Include="src\TinyEngine\Renderer\Renderer2D.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLFramebuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLTexture.cpp" />
@@ -560,11 +558,14 @@
     <ClCompile Include="src\TinyEngine\Core\Layer.cpp" />
     <ClCompile Include="src\TinyEngine\Core\LayerStack.cpp" />
     <ClCompile Include="src\TinyEngine\Core\Log.cpp" />
+    <ClCompile Include="src\TinyEngine\Core\Window.cpp" />
     <ClCompile Include="src\TinyEngine\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\TinyEngine\Renderer\Framebuffer.cpp" />
     <ClCompile Include="src\TinyEngine\Renderer\OrthographicCamera.cpp" />
     <ClCompile Include="src\TinyEngine\Renderer\OrthographicCameraController.cpp" />
     <ClCompile Include="src\TinyEngine\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\TinyEngine\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\TinyEngine\Renderer\Renderer2D.cpp" />
     <ClCompile Include="src\TinyEngine\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\TinyEngine\Renderer\Shader.cpp" />
     <ClCompile Include="src\TinyEngine\Renderer\Texture.cpp" />
