--- a/TinyEngine/TinyEngine.vcxproj.filters
+++ b/TinyEngine/TinyEngine.vcxproj.filters
@@ -1273,6 +1273,7 @@
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
     <ClInclude Include="src\TinyEngine\Scene\Entity.h" />
+    <ClInclude Include="src\TinyEngine\Renderer\Camera.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp">
